--- a/world.html
+++ b/world.html
@@ -11,12 +11,12 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
+    <title>Vail'Shu World</title>
     <meta property="title" content="Charadex" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://www.vailshu.com/" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A arpg based game where you can level up, battle creatures, or just live in the world of vail'shu!">
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
