--- a/masterlist.html
+++ b/masterlist.html
@@ -254,7 +254,7 @@
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
                                 <b class="text-muted">Obtained</b>
-                                <span class="status"></span>
+                                <span class="Obtained"></span>
                             </div>
 
                             <hr>
