--- a/masterlist.html
+++ b/masterlist.html
@@ -253,8 +253,8 @@
 
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Obtained</b>
-                                <span class="Obtained"></span>
+                                <b class="text-muted">Status</b>
+                                <span class="status"></span>
                             </div>
 
                             <hr>
